--- a/src/AuctionService/appsettings.Development.json
+++ b/src/AuctionService/appsettings.Development.json
@@ -8,6 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=auctions;"
   },
-  "Urls": "http://localhost:7001",
-  "IdentityServiceUrl": "http://localhost:5000"
+  "IdentityServiceUrl": "http://localhost:5000",
+  "RabbitMq": {
+    "Host": "localhost"
+  }
 }
