--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -12,6 +12,7 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.4.11",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
