Added Bid service and gprc

--- a/src/GatewayService/appsettings.Development.json
+++ b/src/GatewayService/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "IdentityServiceUrl": "http://localhost:5000",
@@ -19,6 +19,13 @@
         "Destinations": {
           "searchApi": {
             "Address": "http://localhost:7002"
+          }
+        }
+      },
+      "bids": {
+        "Destinations": {
+          "bidApi": {
+            "Address": "http://localhost:7003"
           }
         }
       }
