--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.4.11",
     "next": "14.2.3",
