--- a/src/IdentityService/appsettings.json
+++ b/src/IdentityService/appsettings.json
@@ -12,6 +12,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=identity;"
+    "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;Database=identity;",
+    "ClientApp": "http://localhost:3000"
   }
 }
